--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,11 @@
     "module": "es6",
     "moduleResolution": "node",
     "target": "es5",
-    "allowJs": true,
+    "allowJs": true
   },
   "include": [
-    "./src/**/*"
-  ]
+    "./src/**/*",
+    "@types/types.d.ts"
+  ],
+  "typeRoots": ["@types/**/*"]
 }
